// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display errors 1`] = `
Object {
  "Constructor": "RoutesLoginPage",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"login-page\\">
  <form class=\\"form\\">
    <div class=\\"logo\\"><span><span>[</span> {{ logoText }} <span>]</span></span></div>
    <!--Logo-->
    <!--header-->
    <ul class=\\"errors-panel\\">
      <li>Login fail</li>
    </ul>
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"form-group\\">
      <input name=\\"email\\" type=\\"text\\" placeholder=\\"Enter your email\\" autofocus=\\"\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password\\" type=\\"password\\" placeholder=\\"Enter your password\\">
    </div>
    <!--default-->
    <button type=\\"submit\\">Sign In
      <!--submit-->
    </button>
    <div class=\\"signup-label\\"> Not yet a member? <a href=\\"/\\"> Sign Up </a>
    </div>
    <!--footer-->
  </form>
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "RoutesLoginPage",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"login-page\\">
  <form class=\\"form\\">
    <div class=\\"logo\\"><span><span>[</span> {{ logoText }} <span>]</span></span></div>
    <!--Logo-->
    <!--header-->
    <!--if-->
    <!--ErrorsPanel-->
    <div class=\\"form-group\\">
      <input name=\\"email\\" type=\\"text\\" placeholder=\\"Enter your email\\" autofocus=\\"\\">
    </div>
    <div class=\\"form-group\\">
      <input name=\\"password\\" type=\\"password\\" placeholder=\\"Enter your password\\">
    </div>
    <!--default-->
    <button type=\\"submit\\">Sign In
      <!--submit-->
    </button>
    <div class=\\"signup-label\\"> Not yet a member? <a href=\\"/\\"> Sign Up </a>
    </div>
    <!--footer-->
  </form>
</div>
",
}
`;
